--- a/Examen1aEvAnhoPasado/Ejercicio2A/app/src/main/res/values/strings.xml
+++ b/Examen1aEvAnhoPasado/Ejercicio2A/app/src/main/res/values/strings.xml
@@ -6,10 +6,11 @@
     <string name="calcular">Calcular</string>
 
     <string-array name="temperaturas">
+        <item>Selecciona</item>
         <item> Kelvin </item>
         <item> Celsius </item>
         <item> Fahrenheit </item>
         <item> Rankine </item>
-        <item> Réamur </item>
+        <item> Reamur </item>
     </string-array>
 </resources>
