ej de escribir y leer

--- a/2aEv/Leer_Y_EscribirTextos/app/src/main/res/values/strings.xml
+++ b/2aEv/Leer_Y_EscribirTextos/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Leer_Y_EscribirTextos</string>
     <string name="mostrar_texto">mostrar texto</string>
     <string name="escribir_texto">Escribir texto</string>
+    <string name="escribe">Escribe</string>
+    <string name="introducir_textos">introducir textos</string>
 </resources>
